# L5P-Keyboard-RGB

./: CLI-MIGRATION.md  README.md  example-custom-effect.json  example-profile.json
.github/workflows/: static-rust-build.yml
app/: Cargo.toml
app/src/: cli.rs  main.rs
app/src/manager/: mod.rs
app/src/manager/effects/: fade.rs  mod.rs
