[package]
name = "legion-kb-rgb"
version = "0.20.7"
authors = ["4JX"]
edition = "2021"
homepage = "https://github.com/4JX/L5P-Keyboard-RGB"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Main driver
legion-rgb-driver = { path = "../driver" }

# Cli
clap = { version = "4.5.37", features = ["color", "cargo", "derive"] }

# Keyboard and mouse grabbing
device_query = "4.0.1"

# AmbientLight effect
scrap = { git = "https://github.com/rustdesk/rustdesk", rev = "c626c24", features = [
    "wayland",
    # "linux-pkg-config",
] }
fast_image_resize = "5.1.3"
# default-features = false just removes the use_wasm feature that removes a lot of unecessary slack
# since this app wont ever use the web
# photon-rs = { version = "0.3.2", default-features = false }
photon-rs = { git = "https://github.com/silvia-odwyer/photon", rev = "b7e57c9", default-features = false }

rand = "0.9.1"
strum = "0.27.1"
strum_macros = "0.27.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
color-eyre = "0.6.5" # 6.4 is broken, see https://github.com/eyre-rs/eyre/pull/232
sysinfo = "0.35.0"
crossbeam-channel = "0.5.15"
thiserror = "2.0.12"
single-instance = "0.3.3"
error-stack = "0.5.0"

# Fix versions to stop cargo from yelling about dependency resolution
regex = "1.11.1"

# Dependabot alerts

# HACK: Add a dummy feature to the program because rust-analyzer doesn't want
# to enable linux-pkg-config itself for whatever reason
[features]
scrap-pkg-config = ["scrap/linux-pkg-config"]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "b12aa38"

[package.metadata.vcpkg.target]
x86_64-unknown-linux-gnu = { dependencies = ["libvpx", "libyuv", "aom"] }
x86_64-pc-windows-msvc = { dependencies = [
    "libvpx:x64-windows-static",
    "libyuv:x64-windows-static",
    "aom:x64-windows-static",
] }
